--- a/Module-4CodingAssignment/index.html
+++ b/Module-4CodingAssignment/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <h1>Module 4 Solution Starter</h1>
-    <p>open console to see the output</p>
+    <h1>Module 4 Assignment</h1>
+    <p>View Console</p>
 </body>
 
 </html>
